删除返回按钮

--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -154,7 +154,7 @@
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="SellerLogin.html">登 陆</a>
+                            <li><a href="seller_login.html">登 陆</a>
                             </li>
                             <li><a href="#">退出</a>
                             </li>
@@ -224,13 +224,11 @@
                                 		</div>
                                 		<!-- 登陆按钮位置########################## -->
                             			<div id="order_review" class="woocommerce-checkout-review-order">
-											<div id="payment" class="woocommerce-checkout-payment">
 												<div class="form-row place-order">
 													<!-- 登陆按钮事件############################ -->
 													<input type="submit" class="button alt" id="place_order" value="登 陆 login"
                                                					data-value="Place order"/>
                                     			</div>
-                                			</div>
                             			</div>
                         			</form>
                 				</div>
@@ -292,27 +290,16 @@
                             			</div>
                             			<!--信息确认无误就确认注册吧/////////////////////////////////////////////////////////-->
                             			<div id="order_review" class="woocommerce-checkout-review-order">
-											<div id="payment" class="woocommerce-checkout-payment">
                                     			<div class="form-row place-order">
                                     				<!-- 注册按钮事件##################################### -->
                                         			<input type="submit" class="button alt" id="place_order" value="注 册 商 家 register"
                                                				data-value="Place order"/>
-                                    			</div>                                   
-                                			</div>
+                                    			</div>
                             			</div>
                         			</form>
                             	</div>
                         	</div>
                      	</div>
-                     	<!-- 返回按钮位置 ##################################################-->
-                     	<div id="order_review" class="woocommerce-checkout-review-order">               	   			
-                			<div id="payment" class="woocommerce-checkout-payment">                			
-                	   			<div class="form-row place-order">                	   			
-                       				<input type="button" class="button alt" id="place_order" value="返 回 Return"
-                                    	data-value="Place order" style="line-height:1.3;border:0;width:1010px" onclick="window.history.back(-1)"/>                                        
-                       			</div>
-                     		</div>
-                		</div>
                 	</div>                	
             	</div>
             </div>
