'订单完成，页面更名'

--- a/src/main/webapp/ChangePassword.html
+++ b/src/main/webapp/ChangePassword.html
@@ -145,7 +145,7 @@
                         <ul class="nav navbar-nav clearfix vcenter">
                            
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="SellerMessage.html"><h5>个人信息</h5></a>
+                            <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
                             <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
