--- a/src/main/webapp/display.html
+++ b/src/main/webapp/display.html
@@ -193,12 +193,6 @@
                             <div class="row">
                                 <div class="col-md-2">
                                     <div class="img-group__item tilter tilter--1" id="img">
-                                       <!-- <figure class="tilter__figure">
-                                            &lt;!&ndash;用户头像模块/////////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;
-
-                                                <img class="img-responsive"  scr="" alt="img">
-
-                                        </figure>-->
                                     </div>
                                 </div>
                             </div>
@@ -208,7 +202,15 @@
                                 <!--个人信息描述模块/////////////////////////////////////////////////////////////////////////////////////////-->
                                 <h2>个人信息 Personal Information</h2><br><br>
                                 <ul class="list list-mark2" id="stu">
-                                </ul>
+                                </ul><a href="personal.html">
+                                <div class="alert alert-default alert-block">
+                                    <div class="alert-icon"><i class="icon fa fa-bell"></i>
+                                    </div>
+                                    <div class="alert__inner">
+                                        <h3 class="alert-title" style="color: skyblue">修 改 个 人 信 息</h3>
+                                        <div class="alert-text"><h5>添加新的收货地址 / 更改联系号码 / 更改姓名</h5></div>
+                                    </div>
+                                </div></a>
                             </div>
                         </div>
                     </div>
