用户界面前端修改

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -184,6 +184,10 @@
                         <!--第二行文字/////////////////////////////////////////////////////////////-->
                         <h1 class="ui-title-page">L o g i n</h1>
                     </div>
+                    <div class="woocommerce-info">没有账号?&nbsp; &nbsp;
+                        <!--点击此处跳转到登陆界面/////////////////////////////////////////////////////////////-->
+                        <a href="register.html" class="showcoupon">点击此处注册</a></div>
+                    <br/>
                 </div>
             </div>
             <div class="row">
