--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -225,8 +225,8 @@
                                 </li>
                                 <li><a href="#toEvaluate" data-toggle="tab" onclick="order3(getId())">待评价</a>
                                 </li>
-                              <!--  <li><a href="#evaluated" data-toggle="tab">已评价</a>
-                                </li>-->
+                                <li><a href="#evaluated" data-toggle="tab">已评价</a>
+                                </li>
                                 <li><a href="#afterSale" data-toggle="tab" onclick="order4(getId())">售后</a>
                                 </li>
                             </ul>
