--- a/src/main/webapp/sellerService.html
+++ b/src/main/webapp/sellerService.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>客服</title>
+    <link href="static/wt/css/webSocket.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/wt/css/master.css">
+    <link rel="stylesheet" href="static/layui/css/layui.css" media="all">
     <script src="static/jq/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="static/jq/webSocket/sock_js.js" type="text/javascript"></script>
     <script src="static/jq/webSocket/stomp.js" type="text/javascript"></script>
     <script src="static/jq/webSocket/update.js" type="text/javascript"></script>
+    <script src="static/js/cacheMap.js" type="text/javascript"></script>
     <script type="text/javascript">
         var webSocket = null;
         if ('WebSocket' in window) {
@@ -23,77 +27,137 @@
         }
         webSocket.onmessage = onMessage;
         webSocket.onerror = onError;
+        webSocket.onopen = onOpen();
+
+        function onOpen() {
+            console.log('webSocket链接打开')
+        }
 
         function onMessage(response) {
-            var ta = document.getElementById('responseContext');
             console.log(response.data);
             var msg = $.parseJSON(response.data);
-            ta.value += 'from ' + msg.fromId + ' ' + msg.time + '\n' + msg.message + '\n'
+            addChatListFromServer(msg);
         }
 
         function onError() {
         }
-
     </script>
-    <style type="text/css">
-        .area{
-            width: 95%;
-            height: 100px;
-            border: hidden;
-            background-color: inherit;
-            outline-color: white;
-            resize: none
-        }
-        hr{
-            width: 95%;
-        }
-        div{
-            text-align: center;
-        }
-    </style>
 </head>
-<body>
-    <!--总的框架-->
-    <div id="main" style="width: 100%; height: 100%">
-        <!--菜单栏，用于显示信息-->
-        <div id="menu">
-            <h4>店铺名称</h4>
+<body style="overflow: auto; margin: auto 0">
+<!--总的框架-->
+<div id="main" style="width: 100%; height: 100%; padding-top: 10px;">
+    <div id="left_panel" style="border: thin #eeeeee;border-right-style: solid;">
+        <div style="padding-top: 20px; padding-bottom: 60px; border: thin #eeeeee; border-bottom-style: solid;">
+            <h3 id="myInfo"><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">个人信息链接</h3>
+        </div>
+        <div>
+            <ul id="talk_list" class="social-links">
+                <li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">
+                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
+                </li>
+                <li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">
+                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
+                </li>
+                <li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">
+                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!--菜单栏，用于显示信息-->
+    <div id="main_panel" style="float: right; width: 80%;">
+        <div id="menu" style="height: 80px">
+            <h3 id="sell_name"></h3>
         </div>
         <hr>
         <!--显示对话的面板-->
-        <div id="show" style="width: 100%; height: 300px;">
-
+        <div id="show" style="width: 100%; height: 350px;margin: 0 auto; overflow: auto">
+            <ul id="content_list" style="padding: 0 100px">
+                <li style="float: left; color: red; font-size: 30px">
+                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
+                </li>
+                <br>
+                <li style="float: right">
+                    <h3>userId<img src="static/images/logo-dark.png" style="width: 30px; height: 30px;"></h3>
+                </li>
+            </ul>
         </div>
         <hr>
         <!--文本输入框-->
-        <div id="content" style="width: 100%;text-align: center;">
-            <label for="text">
-                <textarea id="text" class="area"></textarea>
+        <div id="content" style="width: 100%;text-align: center;padding-top: 20px;">
+            <label for="text" style="width: 100%; margin: 0 auto">
+                <textarea id="text" class="area" placeholder="说点啥" name="textarea_name"></textarea>
             </label>
+            <input type="hidden" id="toId" value="">
         </div>
         <!--按钮-->
         <div>
-            <div style="float: right">
-                <button>发送</button>
-                <button>取消</button>
+            <div style="float: right; padding-right: 20px">
+                <input type="button" value="test" id="server">
+                <button class="layui-btn" onclick="send()">发送</button>
             </div>
         </div>
     </div>
-<input type="button" id="server" value="test">
+</div>
 </body>
-<script src="static/jq/jquery-2.1.4.min.js"></script>
 <script src="static/layer/layer.js"></script>
 <script>
-    $('#server').on('click', function(){
+    $('#server').on('click', function () {
         console.log('test');
         layer.open({
             type: 2,
             title: '在线客服',
             maxmin: true,
             shadeClose: false,
-            area : ['40%' , '60%'],
+            area: ['60%', '75%'],
             content: 'sellerService.html'
         });
     });
+    /*
+     * 获取对话列表
+     */
+    $.ajax({
+        url: '/socket/chat_list',
+        type: 'get',
+        success: function (result) {
+            var data = result.data;
+            var ul = $('#talk_list');
+            for (var i in data) {
+                var img = $("<img>");
+                img.attr("style", "padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;");
+                img.attr("src", data[i].path);
+                var content = $("<h3>");
+                content.append(img);
+                content.append(data[i].userId);
+                var li = $("<li>");
+                li.attr("onclick", "li_click(this)");
+                ul.append(li);
+                photoMap[data[i].userId] = img;
+            }
+        },
+        error: function () {
+//            alert('数据请求异常')
+        }
+    });
+
+    /*
+     * 获取个人信息
+     */
+    $.ajax({
+        url: '',
+        type: 'get',
+        success: function (result) {
+            var img = $('<img>');
+            img.attr("src", result.data.path);
+            img.attr("style", "width: 30px; height: 30px;");
+            var myInfo = $('#myInfo');
+            myInfo.append(img);
+            myInfo.append(result.data.name);
+            myPhoto = img;
+        },
+        error: function () {
+        }
+    })
 </script>
 </html>
