--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -12,6 +12,8 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
+    <script type="text/javascript" src="static/js/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="static/js/area_hzb.js"></script>
     <!--[if lt IE 9 ]>
     <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
     <meta content="no" http-equiv="imagetoolbar">
@@ -171,6 +173,7 @@
         </div>
     </header>
     <!-- end .header-->
+
     <div class="l-main-content l-main-content_w-border">
         <div class="container">
             <div class="row">
@@ -200,103 +203,106 @@
                      		</ul>
                         	<div class="tab-content">
                         		<!-- 登陆界面描绘###################################### -->
-                            	<div class="tab-pane fade in active" id="description" >                             		                
-                        			<form name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
+                            	<div class="tab-pane fade in active" id="description" >
+                        			<form id="login" method="post" class="checkout woocommerce-checkout" action="checkout/"
                               					enctype="multipart/form-data" _lpchecked="1">
-                            			<div class="col2-set" id="customer_details">
+                            			<div class="col2-set" id="seller_login">
                                 			<div class="col-1">
                                     			<div class="woocommerce-billing-fields">
-                                       				<!--  登陆表单///////////////////////////////////////////////////////////// -->
                                         			<h3>请输入您的账号和密码</h3>
                                         			<p class="form-row form-row form-row-wide">
-                                            			<label>账 号(Account)</label>
-                                            			<!-- 商家账号s_account///////////////////////////////////////////////////////////// -->
-                                            			<input type="text" class="input-text " name="saccount" placeholder="Account">
+                                            			<input type="text" class="input-text " name="sId" placeholder="请输入您的账号">
                                         			</p>
                                         			<p class="form-row form-row form-row-wide ">
-                                            			<!-- 商家密码，s_password///////////////////////////////////////////////////////////// -->
-                                            			<label>密 码(Password)</label>
-                                            			<input type="password" class="input-text " name="spassword" placeholder="Password">
+                                            			<input type="password" class="input-text " name="sPassword" placeholder="请输入您的密码">
                                         			</p>
                                         			<div class="clear"></div>
                                     			</div>
                                 			</div>
                                 		</div>
                                 		<!-- 登陆按钮位置########################## -->
-                            			<div id="order_review" class="woocommerce-checkout-review-order">
+                            			<div class="woocommerce-checkout-review-order">
 												<div class="form-row place-order">
-													<!-- 登陆按钮事件############################ -->
-													<input type="submit" class="button alt" id="place_order" value="登 陆 login"
-                                               					data-value="Place order"/>
+													<input type="submit" class="button alt" value="登 陆 login" data-value="Place order" onclick="login()"/>
                                     			</div>
                             			</div>
                         			</form>
                 				</div>
                 				<!-- 注册界面描绘################################################ -->
 								<div class="tab-pane fade" id="sizing">
-                        			<form name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
-                              				enctype="multipart/form-data" _lpchecked="1">
-                            			<div class="col2-set" id="customer_details">
+                        			<!--<form id="register" method="post" class="checkout woocommerce-checkout" action="checkout/"
+                              				enctype="multipart/form-data" _lpchecked="1">-->
+                            			<div class="col2-set" id="seller_register">
                                 			<div class="col-1">
-                                    			<div class="woocommerce-billing-fields">
-                                        			<!--注册商家信息表单/////////////////////////////////////////////////////////////-->                   
-                                        			<h3>请输入个人信息</h3>
-                                        			<p class="form-row form-row form-row-wide ">                                     	
-                                            			<!--商家账号，s_account/////////////////////////////////////////////////////////////-->
-                                            			<label>账 号 (Account)</label>
-                                            			<input type="text" class="input-text " name="saccount" placeholder="Account">
-                                        			</p>
-                                        			<p class="form-row form-row form-row-wide ">                                     	
-                                            			<!--商家密码，s_password/////////////////////////////////////////////////////////////-->
-                                            			<label>密 码 (Password)</label>
-                                            			<input type="text" class="input-text " name="password" placeholder="Password" >
-                                        			</p>
-                                        			<p class="form-row form-row form-row-wide ">
-                                            			<!--确认密码，）/////////////////////////////////////////////////////////////-->
-                                            			<label>确 认 密 码 (True Password）</label>
-                                            			<input type="text" class="input-text " name="spassword" placeholder="Confirm Password">
-                                        			</p>
-                                        			<div class="b-filter__group">
-                                            			<p class="form-row form-row form-row-first">
-                                                			<!--用户性别，s_sex/////////////////////////////////////////////////////////////-->
-                                                			<label>性 别(Gender)</label>
-                                            			</p>
-                                            			<select class="selectpicker" data-width="100%" name="sSex">
-                                                			<option value="男">男</option>
-                                                			<option value="女">女</option>
-                                            			</select>
-                                        			</div>
-                                        			<p class="form-row form-row form-row-wide ">
-                                           				<!--用户电话号码，s_tel/////////////////////////////////////////////////////////////-->
-                                            			<label>联系电话(Tel)</label>
-                                            			<input type="text" class="input-text " name="stel" placeholder="Tellphone">
-                                        			</p>
-                                        			<p class="form-row form-row form-row-wide">
-                                            			<!--商家个人地址s_address/////////////////////////////////////////////////////////////-->
-                                            			<label>地址(Address)</label>
-                                            			<input type="text" class="input-text " name="saddress" placeholder="Address">
-                                        			</p>                                       
-                                    			</div>
+                                                    <h3>请输入个人信息</h3>
+                                                    <table rules=none>
+                                                        <tr>
+                                                            <td  colspan="3">
+                                                                <input type="text" style="width: 100%" id="sAccount" placeholder="请输入您的昵称">
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="3">
+                                                                <input type="text" style="width: 100%" data-width="100%" id="sPassword" placeholder="请设置您的密码" >
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td  colspan="3">
+                                                                <input type="text" style="width: 100%" data-width="100%" id="sPassword_rpt" placeholder="请再次输入您的密码">
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="3">
+                                                                <select class="selectpicker" data-width="100%" id="sSex">
+                                                                    <option value="男">男</option>
+                                                                    <option value="女">女</option>
+                                                                </select>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="3">
+                                                                <input type="text" style="width: 100%" data-width="100%" id="sTel" placeholder="请输入您的联系电话">
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td width="30%">
+                                                                <p class="form-row form-row form-row-wide ">
+                                                                    <select id="ddlProvince"/>
+                                                                </p>
+                                                            </td><td width="30%">
+                                                                <p class="form-row form-row form-row-wide ">
+                                                                    <select id="ddlCity"/>
+                                                                </p>
+                                                            </td><td width="30%">
+                                                                <p class="form-row form-row form-row-wide ">
+                                                                    <select id="ddlDistrict" />
+                                                                </p>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="3">
+                                                                <input type="text" style="width: 100%" data-width="100%" id="sAddress" placeholder="详细地址：如镇、道路、门牌号、小区等">
+                                                            </td>
+                                                        </tr>
+                                                    </table>
                                 			</div>
                                 			<div class="col-2">
                                     			<div class="woocommerce-shipping-fields">
                                         			<h3>添加个人头像</h3>
                                         			<p class="form-row form-row">
-                                           				<input type="file" name="s_icon" class="webuploader-element-invisible" multiple accept="image/*">
+                                           				<input type="file" name="sIcon" class="webuploader-element-invisible" multiple accept="image/*">
                                             			<!--上传头像模块，s_icon/////////////////////////////////////////////////////////////-->
                                         			</p>
                                     			</div>
                                 			</div>
                             			</div>
                             			<!--信息确认无误就确认注册吧/////////////////////////////////////////////////////////-->
-                            			<div id="order_review" class="woocommerce-checkout-review-order">
+                            			<div class="woocommerce-checkout-review-order">
                                     			<div class="form-row place-order">
-                                    				<!-- 注册按钮事件##################################### -->
-                                        			<input type="submit" class="button alt" id="place_order" value="注 册 商 家 register"
-                                               				data-value="Place order"/>
+                                        			<input type="submit" class="button alt" value="注 册 商 家 register" data-value="Place order" onclick="register()"/>
                                     			</div>
                             			</div>
-                        			</form>
+                        			<!--</form>-->
                             	</div>
                         	</div>
                      	</div>
@@ -424,6 +430,7 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
+<script src="static/js/seller.js"></script>
 
 </body>
 
