--- a/src/main/webapp/StoreDetails.html
+++ b/src/main/webapp/StoreDetails.html
@@ -403,7 +403,11 @@
 <script type="text/javascript">
     $(function () {
         selectAll(1);
+        window.location.refresh()
     })
 </script>
+
+
+
 
 
