--- a/src/main/webapp/StoreDetails.html
+++ b/src/main/webapp/StoreDetails.html
@@ -12,10 +12,16 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
+    <!--弹出框 样式-->
+    <link rel="stylesheet" type="text/css" href="static/css/xcConfirm.css"/>
+
+
     <!--[if lt IE 9 ]>
     <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
     <meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
+    <!--弹出框样式-->
+
 </head>
 
 <body>
@@ -229,7 +235,7 @@
                             <div class="col2-set" id="customer_details">                          	
                             	<p>&nbsp;&nbsp;&nbsp;&nbsp;</p>                                
                                 <div class="table-container" style="width:1500px">
-                                	<table class="table table_primary" style="width:80%">
+                                	<table class="table table-hover" style="width:80%">
                                     	<thead >
                                         	<tr>
                                                 <th style="width:130px">商品ID</th>
@@ -397,6 +403,10 @@
 <script src="static/jq/showitems.js"></script>
 <script src="static/jq/store.js"></script>
 <script src="static/jq/tool.js"></script>
+<!--弹出框js-->
+<script src="static/js/xcConfirm.js" type="text/javascript" charset="utf-8"></script>
+
+
 </body>
 
 </html>
