'店铺功能完善好'

--- a/src/main/webapp/Store.html
+++ b/src/main/webapp/Store.html
@@ -193,21 +193,26 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <!--模糊搜索店铺名////////////////////////////////////////////-->
-                                    <input class="form-control" type="text" placeholder="Your Select" id="research" name="research">
+                                    <input class="form-control" type="text" placeholder="Your Select" id="research"
+                                           name="research">
                                     <!-- <input type="text" class="input-text "> -->
                                 </div>
                                 <div class="col-md-6">
-                                    <!--查询-->
-                                    <select class="selectpicker" style="height:40px" id="stStatus" name="stStatus">
+                                    <!--店铺状态////////////////////////////////////////////-->
+                                    <select class="selectpicker" style="height:40px" id="stStatus" name="stStatus"
+                                            onchange="onSearch2()">
                                         <option value="0">营业中</option>
                                         <option value="2">关闭中</option>
                                     </select>
                                     &nbsp;&nbsp;
                                     <!--查询按钮////////////////////////////////////////////-->
                                     <input type="button" value="查询" class="ui-form__btn btn btn-dark"
-                                           style="min-width:80px;font-size:14px;line-height:40px"/>
+                                           style="min-width:80px;font-size:14px;line-height:40px"
+                                           onclick="onSearch2()"/>
+
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    &nbsp;&nbsp;&nbsp;
                                     <input type="button" value="添加店铺" class="ui-form__btn btn btn-dark"
                                            onclick="window.location='store_add.html'"
                                            style="min-width:80px;font-size:14px;line-height:40px"/>
@@ -359,14 +364,45 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
-<script src="static/jq/store.js"></script>
-
 </body>
-
 </html>
 
+<script src="static/jq/store.js"></script>
 <script type="text/javascript">
     $(function () {
         storeOnload2();
     })
+</script>
+<script type="text/javascript">
+    function onSearch2() {
+        var research = $("#research").val();
+        var stStatus = $('#stStatus').val();
+        $.ajax({
+            url: '/store/selleResearchStore',
+            type: 'POST',
+            dataType: 'json',
+            data: {research: research, stStatus: stStatus},
+            success: function (result) {
+                var s = '';
+                $.each(result.data, function (i, v) {
+                    s += "<tr><td>" + v.stId;
+                    s += "</td><td>" + v.stName;
+                    if (v.stStatus == 0) {
+                        s += "</td><td>营业中";
+                        s += "</td><td><a href='StoreDetails.html?stId=" + v.stId + "&stName=" + v.stName + "'>进 入 店 铺</a>/";
+                        s += "<a href='' onclick='return false,onChange2(" + v.stId + ")'> 关 闭 店 铺</a></td></tr>";
+                    }
+                    else if (v.stStatus == 2) {
+                        s += "</td><td>关闭中";
+                        s += "</td><td><a href='' onclick='return false,onChange4(" + v.stId + ")'> 重 开 店 铺</a></td></tr>";
+                    }
+                })
+                $("#tableOne").html(s);
+            },
+            error: function (result) {
+                alert(result.message);
+            }
+        })
+    }
+
 </script>
