--- a/src/main/webapp/store_add.html
+++ b/src/main/webapp/store_add.html
@@ -217,7 +217,7 @@
 
                                     <div class="form-row place-order">
                                         <!--确认按钮////////////////////////////////////////////////-->
-                                        <input type="button" class="button alt" value="确 认 Save" onclick="onAdd1()"
+                                        <input type="button" class="button alt" value="确 认 Save" onclick="storeOnAdd1()"
                                                data-value="Place order"/>
                                     </div>
                                     <div class="form-row place-order">
