'完善管理员对店铺的查询'

--- a/src/main/webapp/evaluate.html
+++ b/src/main/webapp/evaluate.html
@@ -432,6 +432,7 @@
 </body>
 </html>
 <script type="text/javascript" src="static/jq/evaluate.js"></script>
+<script type="text/javascript" src="static/jq/tool.js"></script>
 <script type="text/javascript">
     $(function (orderId) {
         orderId = getQueryString('orderId');
