--- a/src/main/webapp/manage_store.html
+++ b/src/main/webapp/manage_store.html
@@ -184,9 +184,10 @@
                             </div>
                             <div>
                                 <!--状态下拉框--condition////////////////////////////////////////-->
-                                <select class="selectpicker" style="height:40px" id="stStatus" name="stStatus">
+                                <select class="selectpicker" style="height:40px" id="stStatus" name="stStatus" onchange="onSearch1()">
                                     <option value=0>正常</option>
                                     <option value=1>违规</option>
+                                    <option value=2>停业</option>
                                 </select>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 <!--条件下拉框--condition////////////////////////////////////////-->
