修改一些前端页面以及将json文件和js独立出来

--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -299,7 +299,7 @@
                             			<!--信息确认无误就确认注册吧/////////////////////////////////////////////////////////-->
                             			<div class="woocommerce-checkout-review-order">
                                     			<div class="form-row place-order">
-                                        			<input type="submit" class="button alt" value="注 册 商 家 register" data-value="Place order" onclick="register()"/>
+                                        			<input type="button" class="button alt" value="注 册 商 家 register" data-value="Place order" onclick="register()"/>
                                     			</div>
                             			</div>
                         			<!--</form>-->
