--- a/src/main/webapp/seller_message.html
+++ b/src/main/webapp/seller_message.html
@@ -12,6 +12,10 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
+    <script type="text/javascript" src="static/js/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="static/js/area_hzb.js"></script>
+    <script src="static/js/seller.js"></script>
+    <script src="static/jq/ajaxfileupload.js"></script>
     <!--[if lt IE 9 ]>
     <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
     <meta content="no" http-equiv="imagetoolbar">
@@ -154,9 +158,9 @@
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="seller_login_register.html">登 陆</a>
+                            <li><a href="seller_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">退 出</a>
+                            <li><a onclick="exit()">退 出</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -191,91 +195,81 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="woocommerce">
-                        <form class="checkout_coupon" method="post" style="display:none">
-                            <p class="form-row form-row-first">
-                                <input type="text" name="coupon_code" class="input-text" placeholder="Coupon code"
-                                       id="coupon_code" value="">
-                            </p>
-                            <p class="form-row form-row-last">
-                                <input type="submit" class="button" name="apply_coupon" value="Apply Coupon">
-                            </p>
-                            <div class="clear"></div>
-                        </form>
-                        <form name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
-                              enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">
                             <!-- 信息显示 -->
                                 <div class="col-1">
                                     <div class="woocommerce-billing-fields">
                                         <!--信息表单/////////////////////////////////////////////////////////////-->
                                         <h3>个人信息列表</h3>
-                                        <p class="form-row form-row form-row-wide">
-                                            <label>I D</label>
-                                            <!--商家ID，s_id/////////////////////////////////////////////////////////////-->
-                                            <!-- 动态获取ID，无法修改 -->
-                                            <label>123456</label>
-                                            <!-- <input type="text" class="input-text " name="uUsername"> -->
-                                        </p>
-                                        <p class="form-row form-row form-row-wide ">
-                                            <!--商家账号，s_account/////////////////////////////////////////////////////////////-->
-                                            <label>账 号(Account)</label>
-                                            <!-- 输入栏显示账号，可修改 -->
-                                            <input type="text" class="input-text " name="sUsername" placeholder="Account">
-                                        </p>
-                                        <p class="form-row form-row form-row-wide ">
-                                            <!--动态获取商家性别，s_sex/////////////////////////////////////////////////////////////-->
-                                            <label>性 别(Sex)</label>
-                                            <select class="textBox" name="sSex" style="height:40px;width:100px">
-      											<option value="男">男</option>
-      											<option value="女">女</option>
-     										</select>
-                                        </p>
-                                        <p class="form-row form-row form-row-wide ">
-                                            <!--动态获取商家电话，s_tel）/////////////////////////////////////////////////////////////-->
-                                            <label>电 话(Tel）</label>
-                                            <input type="text" class="input-text " name="sPhone" placeholder="TellPhone">
-                                        </p>
-                                        <p class="form-row form-row form-row-wide ">
-                                            <!--动态获取商家地址，s_address/////////////////////////////////////////////////////////////-->
-                                            <label>地 址(Address)</label>
-                                            <input type="text" class="input-text " name="sAddress" placeholder="Address">
-                                        </p>                         	
+                                        <table rules=none>
+                                            <tr>
+                                                <td width="22%"><label>昵称:</label></td>
+                                                <td  colspan="3">
+                                                    <input type="text" style="width: 100%" id="sAccount">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td width="22%"><label>性别:</label></td>
+                                                <td colspan="3">
+                                                    <select class="selectpicker" data-width="100%" id="sSex">
+                                                        <option value="男">男</option>
+                                                        <option value="女">女</option>
+                                                    </select>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td width="22%"><label>联系电话:</label></td>
+                                                <td colspan="3">
+                                                    <input type="text" style="width: 100%" data-width="100%" id="sTel">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td width="10%" rowspan="2">
+                                                    <label>地址：</label>
+                                                </td>
+                                                <td width="30%">
+                                                    <p class="form-row form-row form-row-wide ">
+                                                        <select id="ddlProvince"/>
+                                                    </p>
+                                                </td><td width="30%">
+                                                <p class="form-row form-row form-row-wide ">
+                                                    <select id="ddlCity"/>
+                                                </p>
+                                            </td><td width="30%">
+                                                <p class="form-row form-row form-row-wide ">
+                                                    <select id="ddlDistrict" />
+                                                </p>
+                                            </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="3">
+                                                    <input type="text" style="width: 100%" data-width="100%" id="sAddress" placeholder="详细地址：如镇、道路、门牌号、小区等">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="2" rowspan="2">
+                                                    <input type="button" class="button alt" value="保 存 信 息 Save Information"
+                                                           data-value="Place order" onclick="update_info()"/>
+                                                </td>
+                                                <td colspan="2" rowspan="2">
+                                                    <input type="button" class="button alt" value="修 改 密 码 Change Password"
+                                                           data-value="Place order" onclick="window.location='ChangePassword.html'"/>
+                                                </td>
+                                            </tr>
+                                        </table>
                                         <div class="clear"></div>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="woocommerce-shipping-fields">
                                         <h3>可修改个人头像</h3>
-                                        <p class="form-row form-row">
-                                            <!--右侧头像图位置/////////////////////////////////////////////////////////////-->
-                                            <a class="b-goods__media js-zoom-images"
-                                               href="static/wt/images/2_1.jpg">
-                                                <img class="img-responsive" src="static/wt/images/2_1.jpg" alt="img">
-                                            </a>
                                             <p class="form-row form-row">
-                                           <input type="file" name="s_icon" class="webuploader-element-invisible" multiple accept="image/*">                                          
-                                           	<!--可以看到商家原来的头像s_icon/////////////////////////////////////////////////////////////-->
-                                        </p>
+                                                <input type="file" name="Photos" id="uploadPhotoId" onchange="uploadPhoto()" required="required">
+                                            </p>
+                                            <div style="width:200px; height:200px; border:none; overflow:hidden;" id="photo"></div>
                                     </div>
                                 </div>
                             </div>
-                            <!--<h3 id="order_review_heading">确认无误，保存</h3>-->
-                            <div id="order_review" class="woocommerce-checkout-review-order">
-
-                                <div id="payment" class="woocommerce-checkout-payment">
-
-                                    <div class="form-row place-order">
-
-                                        <input type="submit" class="button alt" id="place_order" value="保 存 信 息 Save Information"
-                                               data-value="Place order"/>
-                                    </div>
-                                    <div class="form-row place-order">
-                                        <input type="button" class="button alt" id="place_order" value="修 改 密 码 Change Password"
-                                               data-value="Place order" style="line-height:1.3;border:0" onclick="window.location='ChangePassword.html'"/>                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -400,7 +394,25 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
-
+<script type="text/javascript">
+    $(function () {
+        display1();
+    })
+</script>
+<script type="text/javascript">
+    function  uploadPhoto() {
+        alert("coming")
+        $.ajaxFileUpload({
+            url:"uploadPhoto",
+            secureuri:false,//是否启动安全提交，默认为false
+            fileElementId:"uploadPhotoId",//需要上传的文件ID
+            dataType:'text',
+            success:function (data) {
+                $("#photo").html("<img  width='200px' height='200px' src='"+data+"'/>");
+            }
+        })
+    }
+</script>
 </body>
 
 </html>
