--- a/src/main/webapp/seller_message.html
+++ b/src/main/webapp/seller_message.html
@@ -249,11 +249,11 @@
                                             <tr>
                                                 <td colspan="2" rowspan="2">
                                                     <input type="button" class="button alt" value="保 存 信 息 Save Information"
-                                                           data-value="Place order" onclick="update_info()"/>
+                                                           data-value="Place order" onclick="update_info()" style="line-height:1.3;border:0"/>
                                                 </td>
                                                 <td colspan="2" rowspan="2">
                                                     <input type="button" class="button alt" value="修 改 密 码 Change Password"
-                                                           data-value="Place order" onclick="window.location='ChangePassword.html'"/>
+                                                           data-value="Place order" onclick="window.location='ChangePassword.html'" style="line-height:1.3;border:0"/>
                                                 </td>
                                             </tr>
                                         </table>
